# src/docs/swagger.json
@@ -341,6 +341,108 @@
                 }
             }
         },
+        "/rbac/permission-assignment": {
+            "post": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "RBAC permissionAssignment"
+                ],
+                "summary": "PermissionAssignment 생성",
+                "parameters": [
+                    {
+                        "description": "Data",
+                        "name": "data",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/dblayer.PermissionAssignmentData"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.PermissionAssignment"
+                        }
+                    }
+                }
+            }
+        },
+        "/rbac/permission-assignment/{id}": {
+            "delete": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "RBAC permissionAssignment"
+                ],
+                "summary": "PermissionAssignment 삭제",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "PermissionAssignment ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "삭제된 PermissionAssignment 데이터",
+                        "schema": {
+                            "$ref": "#/definitions/models.PermissionAssignment"
+                        }
+                    }
+                }
+            },
+            "patch": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "RBAC permissionAssignment"
+                ],
+                "summary": "PermissionAssignment Update",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "PermissionAssignment ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "Update에 사용할 Data",
+                        "name": "data",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/dblayer.PermissionAssignmentData"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "수정된 PermissionAssignment 데이터",
+                        "schema": {
+                            "$ref": "#/definitions/models.PermissionAssignment"
+                        }
+                    }
+                }
+            }
+        },
         "/rbac/permission/list": {
             "get": {
                 "consumes": [
@@ -372,6 +474,42 @@
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/dblayer.PermissionsPage"
+                        }
+                    }
+                }
+            }
+        },
+        "/rbac/permission/objects": {
+            "post": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "RBAC permission"
+                ],
+                "summary": "Permission 에 해당하는 objects 조회",
+                "parameters": [
+                    {
+                        "description": "Object를 구하는데 필요한 permission 정보",
+                        "name": "data",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/rest.PermissionKey"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "허용된 object list",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "type": "string"
+                            }
                         }
                     }
                 }
@@ -441,108 +579,6 @@
                         "description": "수정된 Permission 데이터",
                         "schema": {
                             "$ref": "#/definitions/models.Permission"
-                        }
-                    }
-                }
-            }
-        },
-        "/rbac/permissionAssignment": {
-            "post": {
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "RBAC permissionAssignment"
-                ],
-                "summary": "PermissionAssignment 생성",
-                "parameters": [
-                    {
-                        "description": "Data",
-                        "name": "data",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/dblayer.PermissionAssignmentData"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/models.PermissionAssignment"
-                        }
-                    }
-                }
-            }
-        },
-        "/rbac/permissionAssignment/{id}": {
-            "delete": {
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "RBAC permissionAssignment"
-                ],
-                "summary": "PermissionAssignment 삭제",
-                "parameters": [
-                    {
-                        "type": "integer",
-                        "description": "PermissionAssignment ID",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "삭제된 PermissionAssignment 데이터",
-                        "schema": {
-                            "$ref": "#/definitions/models.PermissionAssignment"
-                        }
-                    }
-                }
-            },
-            "patch": {
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "RBAC permissionAssignment"
-                ],
-                "summary": "PermissionAssignment Update",
-                "parameters": [
-                    {
-                        "type": "integer",
-                        "description": "PermissionAssignment ID",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
-                    },
-                    {
-                        "description": "Update에 사용할 Data",
-                        "name": "data",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/dblayer.PermissionAssignmentData"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "수정된 PermissionAssignment 데이터",
-                        "schema": {
-                            "$ref": "#/definitions/models.PermissionAssignment"
                         }
                     }
                 }
@@ -686,7 +722,93 @@
                 }
             }
         },
-        "/rbac/subjectAssignment": {
+        "/rbac/role/{id}/permission": {
+            "get": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "RBAC role"
+                ],
+                "summary": "Role에 속하는 Permission들의 id 목록 조회",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Role ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Page Number",
+                        "name": "page",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Page Size",
+                        "name": "pageSize",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/dblayer.PermissionsOfRolePage"
+                        }
+                    }
+                }
+            }
+        },
+        "/rbac/role/{id}/subject": {
+            "get": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "RBAC role"
+                ],
+                "summary": "Role에 속하는 Subject들의 id 목록 조회",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Role ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Page Number",
+                        "name": "page",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Page Size",
+                        "name": "pageSize",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/dblayer.SubjectsOfRolePage"
+                        }
+                    }
+                }
+            }
+        },
+        "/rbac/subject-assignment": {
             "post": {
                 "consumes": [
                     "application/json"
@@ -719,7 +841,7 @@
                 }
             }
         },
-        "/rbac/subjectAssignment/{id}": {
+        "/rbac/subject-assignment/{id}": {
             "delete": {
                 "consumes": [
                     "application/json"
@@ -818,6 +940,49 @@
                 }
             }
         },
+        "dblayer.PermissionOfRole": {
+            "type": "object",
+            "properties": {
+                "action": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "object": {
+                    "type": "string"
+                },
+                "permission_id": {
+                    "type": "integer"
+                },
+                "role_id": {
+                    "type": "integer"
+                },
+                "service_name": {
+                    "type": "string"
+                }
+            }
+        },
+        "dblayer.PermissionsOfRolePage": {
+            "type": "object",
+            "properties": {
+                "count": {
+                    "type": "integer"
+                },
+                "next": {
+                    "type": "string"
+                },
+                "previous": {
+                    "type": "string"
+                },
+                "results": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/dblayer.PermissionOfRole"
+                    }
+                }
+            }
+        },
         "dblayer.PermissionsPage": {
             "type": "object",
             "properties": {
@@ -877,6 +1042,26 @@
                 },
                 "subject_id": {
                     "type": "integer"
+                }
+            }
+        },
+        "dblayer.SubjectsOfRolePage": {
+            "type": "object",
+            "properties": {
+                "count": {
+                    "type": "integer"
+                },
+                "next": {
+                    "type": "string"
+                },
+                "previous": {
+                    "type": "string"
+                },
+                "results": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/models.SubjectAssignment"
+                    }
                 }
             }
         },
@@ -1030,10 +1215,10 @@
                 "id": {
                     "type": "integer"
                 },
-                "role_id": {
+                "permission_id": {
                     "type": "integer"
                 },
-                "spermission_id": {
+                "role_id": {
                     "type": "integer"
                 }
             }
@@ -1060,6 +1245,23 @@
                 },
                 "role_id": {
                     "type": "integer"
+                },
+                "subject_id": {
+                    "type": "integer"
+                }
+            }
+        },
+        "rest.PermissionKey": {
+            "type": "object",
+            "properties": {
+                "action": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "service_name": {
+                    "type": "string"
                 },
                 "subject_id": {
                     "type": "integer"
