# src/rbac/rest/handler_permission_assignment.go
@@ -16,7 +16,7 @@ import (
 // @Produce json
 // @Param data body dblayer.PermissionAssignmentData true "Data"
 // @Success 200 {object} models.PermissionAssignment
-// @Router /rbac/permissionAssignment [post]
+// @Router /rbac/permission-assignment [post]
 func (h *Handler) AddPermissionAssignment(c *gin.Context) {
 	var permissionAssignmentData dblayer.PermissionAssignmentData
 
@@ -35,7 +35,7 @@ func (h *Handler) AddPermissionAssignment(c *gin.Context) {
 // @Param id path int  true  "PermissionAssignment ID"
 // @Param data body dblayer.PermissionAssignmentData true "Update에 사용할 Data"
 // @Success 200 {object} models.PermissionAssignment "수정된 PermissionAssignment 데이터"
-// @Router /rbac/permissionAssignment/{id} [patch]
+// @Router /rbac/permission-assignment/{id} [patch]
 func (h *Handler) UpdatePermissionAssignment(c *gin.Context) {
 
 	p := c.Param("id")
@@ -57,7 +57,7 @@ func (h *Handler) UpdatePermissionAssignment(c *gin.Context) {
 // @Produce json
 // @Param id path int true  "PermissionAssignment ID"
 // @Success 200 {object} models.PermissionAssignment "삭제된 PermissionAssignment 데이터"
-// @Router /rbac/permissionAssignment/{id} [delete]
+// @Router /rbac/permission-assignment/{id} [delete]
 func (h *Handler) DeletePermissionAssignment(c *gin.Context) {
 	p := c.Param("id")
 	id, err := strconv.Atoi(p)
