# src/rbac/rest/handler_role.go
@@ -26,6 +26,46 @@ func (h *Handler) GetRolesPage(c *gin.Context) {
 	c.JSON(http.StatusOK, roles)
 }
 
+// @Summary Role에 속하는 Subject들의 id 목록 조회
+// @Tags RBAC role
+// @Accept json
+// @Produce json
+// @Param id path int  true  "Role ID"
+// @Param page query int false  "Page Number"
+// @Param pageSize query int false  "Page Size"
+// @Success 200 {object} dblayer.SubjectsOfRolePage
+// @Router /rbac/role/{id}/subject [get]
+func (h *Handler) GetSubjectsOfRolePage(c *gin.Context) {
+	p := c.Param("id")
+	roleID, err := strconv.Atoi(p)
+	ce.GinError(c, err)
+
+	page, pageSize, hostUrl := paginate.ParsePageUrl(c)
+	roles, err := h.db.GetSubjectsOfRolePage(roleID, page, pageSize, hostUrl)
+	ce.GinError(c, err)
+	c.JSON(http.StatusOK, roles)
+}
+
+// @Summary Role에 속하는 Permission들의 id 목록 조회
+// @Tags RBAC role
+// @Accept json
+// @Produce json
+// @Param id path int  true  "Role ID"
+// @Param page query int false  "Page Number"
+// @Param pageSize query int false  "Page Size"
+// @Success 200 {object} dblayer.PermissionsOfRolePage
+// @Router /rbac/role/{id}/permission [get]
+func (h *Handler) GetPermissionsOfRolePage(c *gin.Context) {
+	p := c.Param("id")
+	roleID, err := strconv.Atoi(p)
+	ce.GinError(c, err)
+
+	page, pageSize, hostUrl := paginate.ParsePageUrl(c)
+	roles, err := h.db.GetPermissionsOfRolePage(roleID, page, pageSize, hostUrl)
+	ce.GinError(c, err)
+	c.JSON(http.StatusOK, roles)
+}
+
 // @Summary Role 생성
 // @Tags RBAC role
 // @Accept json
