# src/rbac/rest/handler_subject_assignment.go
@@ -16,7 +16,7 @@ import (
 // @Produce json
 // @Param data body dblayer.SubjectAssignmentData true "Data"
 // @Success 200 {object} models.SubjectAssignment
-// @Router /rbac/subjectAssignment [post]
+// @Router /rbac/subject-assignment [post]
 func (h *Handler) AddSubjectAssignment(c *gin.Context) {
 	var itemData dblayer.SubjectAssignmentData
 
@@ -35,7 +35,7 @@ func (h *Handler) AddSubjectAssignment(c *gin.Context) {
 // @Param id path int  true  "SubjectAssignment ID"
 // @Param data body dblayer.SubjectAssignmentData true "Update에 사용할 Data"
 // @Success 200 {object} models.SubjectAssignment "수정된 SubjectAssignment 데이터"
-// @Router /rbac/subjectAssignment/{id} [patch]
+// @Router /rbac/subject-assignment/{id} [patch]
 func (h *Handler) UpdateSubjectAssignment(c *gin.Context) {
 
 	defer gin.Recovery()
@@ -59,7 +59,7 @@ func (h *Handler) UpdateSubjectAssignment(c *gin.Context) {
 // @Produce json
 // @Param id path int true  "SubjectAssignment ID"
 // @Success 200 {object} models.SubjectAssignment "삭제된 SubjectAssignment 데이터"
-// @Router /rbac/subjectAssignment/{id} [delete]
+// @Router /rbac/subject-assignment/{id} [delete]
 func (h *Handler) DeleteSubjectAssignment(c *gin.Context) {
 	p := c.Param("id")
 	id, err := strconv.Atoi(p)
